2014-05-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/testsuite/gpdasm.project/op14e.asm,
    gputils/testsuite/test:
    Added the enhanced 14 bit core test.

2014-05-24  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/testsuite/gpasm.project/listfiles/op14e.lst,
    gpasm/testsuite/gpasm.project/listfiles/pageselw1.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/pageselw2.lst:
    Removed the executable flags.

2014-05-18  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/Makefile.am, gpasm/Makefile.in:
    FreeBSD specific changes. Thanks to Tijl Coosemans.

2014-05-17  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * man/gpasm.1.in, man/fr/gpasm.1.in:
    Updated the date.

2014-05-17  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure: Updated the version strings.

2014-05-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, header/Makefile.am, header/Makefile.in,
    header/p16f18313.inc, header/p16f18323.inc, header/p16lf18313.inc,
    header/p16lf18323.inc, header/p16f1xxx.inc, libgputils/gpprocessor.c,
    lkr/Makefile.am, lkr/Makefile.in, lkr/16f18313_g.lkr, lkr/16f18323_g.lkr,
    lkr/16lf18313_g.lkr, lkr/16lf18323_g.lkr:
    New devices based on the mplabx-2.0.

2014-05-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, header/Makefile.am, header/Makefile.in,
    header/p16lf1554.inc, header/p16lf1559.inc, header/p16f1xxx.inc,
    libgputils/gpcfg-table.c, libgputils/gpprocessor.c, lkr/Makefile.am,
    lkr/Makefile.in, lkr/16lf1554_g.lkr, lkr/16lf1559_g.lkr:
    New devices based on the mplabx-2.0.

2014-05-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/*.inc,
    lkr/*.lkr:
    Updated based on the mplabx-2.10.

2014-05-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, configure, configure.ac:
    Version changed to 1.3.0.

  * man/gpasm.1.in, man/fr/gpasm.1.in: